--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
     <meta charset="utf-8">
          <title>JW's Test Webpage</title>
+         <style>
+             body {
+                 font-family: Calibri, Helvetica, sans-serif;
+             }
+         </style>
     </head>
     <body>
         <h1>Welcome to JW's testpage!</h1>
