--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </head>
     <body>
         <h1>Welcome to JW's testpage!</h1>
+        <div id=header>
+            <a href="about.html>About</a>
+        </div>
         <h4>Below you will find the revelant files for the project(s) I am currently working on. I do not actively maintain this site, however.</h4>
         <p>Status: List of active public projects</p>
         <a href="https://github.com/jdabtieu?tab=repositories">Alternatively, browse my repositories.</a>
