--- a/index.html
+++ b/index.html
@@ -3,39 +3,46 @@
     <head>
     <meta charset="utf-8">
          <title>JW's Test Webpage</title>
-         <style>
-             body {
-                 font-family: Calibri, Helvetica, sans-serif;
-             }
-         </style>
+         <link rel="stylesheet" type="text/css" href="/index.css">
     </head>
     <body>
-        <h1>Welcome to JW's testpage!</h1>
-        <div id=header>
-            <a href="pages/about.html">About</a>
-        </div>
-        <h4>Below you will find the revelant files for the project(s) I am currently working on. I do not actively maintain this site, however.</h4>
-        <p>Status: List of active public projects</p>
-        <a href="https://github.com/jdabtieu?tab=repositories">Alternatively, browse my repositories.</a>
-        <ul>
-            <li>DMOJ solutions (Java 8)</li>
-            <ul>
-                <li>Installer: Not available</li>
-                <li>zip: Not available</li>
-                <li>Source Code: Not available</li>
-            </ul>
-            <li>This webpage</li>
-            <ul>
-                <li>Installer: Not available</li>
-                <li>zip: Not available</li>
-                <li>Source Code: <a href="https://github.com/jdabtieu/jdabtieu.github.io">https://github.com/jdabtieu/jdabtieu.github.io</a></li>
-            </ul>
-            <li>project:23df6187-f1f6-4716-b2db-68d146b834cb (Java 8)</li>
-            <ul>
-                <li>Installer: Not available</li>
-                <li>zip: Not available</li>
-                <li>Source Code: Not available</li>
-            </ul>
-        </ul>
+		<div id="social">
+			<a class="home-button" href="/index.html">JW's Test Webpage</a>
+			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank">Instagram</a>
+			<a class="social-button" href="https://github.com/jdabtieu" target="_blank">GitHub</a>
+		</div>
+		<div id="header">
+			<a class="header-link" href="/index.html">Home</a>
+			<a class="header-link" href="pages/about.html">About</a>
+		</div>
+		<div id="home-banner">
+			<img class="header-image" src="resources/images/banner.jpg" alt="Background image">
+			<h1 class="title">Welcome to JW's testpage!</h1>
+		</div>
+		<div id="main-content">
+			<h4>Below you will find the relevant files for the project(s) I am currently working on. I do not actively maintain this site, however.</h4>
+			<p>Status: List of active public projects</p>
+			<a href="https://github.com/jdabtieu?tab=repositories">Alternatively, browse my repositories.</a>
+			<ul>
+				<li>DMOJ solutions (Java 8)</li>
+				<ul>
+					<li>Installer: Not available</li>
+					<li>zip: Not available</li>
+					<li>Source Code: Not available</li>
+				</ul>
+				<li>This webpage</li>
+				<ul>
+					<li>Installer: Not available</li>
+					<li>zip: Not available</li>
+					<li>Source Code: <a href="https://github.com/jdabtieu/jdabtieu.github.io">https://github.com/jdabtieu/jdabtieu.github.io</a></li>
+				</ul>
+				<li>project:23df6187-f1f6-4716-b2db-68d146b834cb (Java 8)</li>
+				<ul>
+					<li>Installer: Not available</li>
+					<li>zip: Not available</li>
+					<li>Source Code: Not available</li>
+				</ul>
+			</ul>
+		</div>
     </body>
 </html>
