--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,22 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>About</title>
+    <meta charset="utf-8">
+         <title>About</title>
+         <link rel="stylesheet" type="text/css" href="/index.css">
     </head>
     <body>
-        <p>Content is yet to be added.</p>
+		<div id="social">
+			<a class="home-button" href="/index.html">JW's Test Webpage</a>
+			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank">Instagram</a>
+			<a class="social-button" href="https://github.com/jdabtieu" target="_blank">GitHub</a>
+		</div>
+		<div id="header">
+			<a class="header-link" href="/index.html">Home</a>
+			<a class="header-link" href="pages/about.html">About</a>
+		</div>
+		<div id="main-content">
+			<p>Content is yet to be added.</p>
+		</div>
     </body>
 </html>
