Add social images and reformat banner

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
 		<div id="social">
 			<a class="home-button" href="/index.html">JW's Test Webpage</a>
-			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank">Instagram</a>
-			<a class="social-button" href="https://github.com/jdabtieu" target="_blank">GitHub</a>
+			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/instagram.png" alt="Instagram"></img></a>
+			<a class="social-button" href="https://github.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/github.png" alt="GitHub"></img></a>
 		</div>
 		<div id="header">
 			<a class="header-link" href="/index.html">Home</a>
@@ -26,13 +26,13 @@
 			<ul>
 				<li>DMOJ solutions (Java 8)</li>
 				<ul>
-					<li>Installer: Not available</li>
+					<li>Installer: N/A</li>
 					<li>zip: Not available</li>
 					<li>Source Code: Not available</li>
 				</ul>
 				<li>This webpage</li>
 				<ul>
-					<li>Installer: Not available</li>
+					<li>Installer: N/A</li>
 					<li>zip: Not available</li>
 					<li>Source Code: <a href="https://github.com/jdabtieu/jdabtieu.github.io">https://github.com/jdabtieu/jdabtieu.github.io</a></li>
 				</ul>
@@ -43,6 +43,9 @@
 					<li>Source Code: Not available</li>
 				</ul>
 			</ul>
+		</div>
+		<div id="footer">
+			<p>Copyright © jdabtieu, 2020. All rights reserved.</p>
 		</div>
     </body>
 </html>
