--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="social">
 			<a class="home-button" href="/index.html">JW's Test Webpage</a>
 			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/instagram.png" alt="Instagram"></img></a>
-			<a class="social-button" href="https://github.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/github.png" alt="GitHub"></img></a>
+			<a class="social-button" href="https://github.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/GitHub.png" alt="GitHub"></img></a>
 		</div>
 		<div id="header">
 			<a class="header-link" href="/index.html">Home</a>
