--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
     <meta charset="utf-8">
          <title>JW's Test Webpage</title>
+		 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
          <link rel="stylesheet" type="text/css" href="/index.css">
     </head>
     <body>
 		<div id="social">
 			<a class="home-button" href="/index.html">JW's Test Webpage</a>
 			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/instagram.png" alt="Instagram"></img></a>
-			<a class="social-button" href="https://github.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/github.png" alt="GitHub"></img></a>
+			<a class="social-button" href="https://github.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/GitHub.png" alt="GitHub"></img></a>
 		</div>
 		<div id="header">
 			<a class="header-link" href="/index.html">Home</a>
@@ -47,5 +48,23 @@
 		<div id="footer">
 			<p>Copyright © jdabtieu, 2020. All rights reserved.</p>
 		</div>
-    </body>
+		<script>
+		if (window.innerWidth < 1280) {
+			alert("Please use a larger screen. Mobile viewing is unsupported.");
+		} else {
+			var listLength = document.getElementsByClassName("header-link").length;
+			for (var i = 0; i < listLength; i++) {
+				document.getElementsByClassName("header-link")[i].style.fontSize = (16 * window.innerWidth / 1300) + "px";
+			}
+		}
+		window.onresize = function() {
+			 if (window.innerWidth >= 1500) {
+				var listLength = document.getElementsByClassName("header-link").length;
+				for (var i = 0; i < listLength; i++) {
+					document.getElementsByClassName("header-link")[i].style.fontSize = (16 * window.innerWidth / 1300) + "px";
+				}
+			}
+		}
+		</script>
+	</body>
 </html>
