--- a/index.html
+++ b/index.html
@@ -1,70 +1,15 @@
 <!doctype html>
 <html>
-    <head>
-    <meta charset="utf-8">
-         <title>JW's Test Webpage</title>
-		 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-         <link rel="stylesheet" type="text/css" href="/index.css">
-    </head>
-    <body>
-		<div id="social">
-			<a class="home-button" href="/index.html">JW's Test Webpage</a>
-			<a class="social-button" href="https://instagram.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/instagram.png" alt="Instagram"></img></a>
-			<a class="social-button" href="https://github.com/jdabtieu" target="_blank"><img class="social-button" src="resources/images/GitHub.png" alt="GitHub"></img></a>
-		</div>
-		<div id="header">
-			<a class="header-link" href="/index.html">Home</a>
-			<a class="header-link" href="pages/about.html">About</a>
-		</div>
-		<div id="home-banner">
-			<img class="header-image" src="resources/images/banner.jpg" alt="Background image">
-			<h1 class="title">Welcome to JW's testpage!</h1>
-		</div>
-		<div id="main-content">
-			<h4>Below you will find the relevant files for the project(s) I am currently working on. I do not actively maintain this site, however.</h4>
-			<p>Status: List of active public projects</p>
-			<a href="https://github.com/jdabtieu?tab=repositories">Alternatively, browse my repositories.</a>
-			<ul>
-				<li>DMOJ solutions (Java 8)</li>
-				<ul>
-					<li>Installer: N/A</li>
-					<li>zip: Not available</li>
-					<li>Source Code: Not available</li>
-				</ul>
-				<li>This webpage</li>
-				<ul>
-					<li>Installer: N/A</li>
-					<li>zip: Not available</li>
-					<li>Source Code: <a href="https://github.com/jdabtieu/jdabtieu.github.io">https://github.com/jdabtieu/jdabtieu.github.io</a></li>
-				</ul>
-				<li>project:23df6187-f1f6-4716-b2db-68d146b834cb (Java 8)</li>
-				<ul>
-					<li>Installer: Not available</li>
-					<li>zip: Not available</li>
-					<li>Source Code: Not available</li>
-				</ul>
-			</ul>
-		</div>
-		<div id="footer">
-			<p>Copyright © jdabtieu, 2020. All rights reserved.</p>
-		</div>
-		<script>
-		if (window.innerWidth < 1280) {
-			alert("Please use a larger screen. Mobile viewing is unsupported.");
-		} else {
-			var listLength = document.getElementsByClassName("header-link").length;
-			for (var i = 0; i < listLength; i++) {
-				document.getElementsByClassName("header-link")[i].style.fontSize = (16 * window.innerWidth / 1300) + "px";
-			}
-		}
-		window.onresize = function() {
-			 if (window.innerWidth >= 1500) {
-				var listLength = document.getElementsByClassName("header-link").length;
-				for (var i = 0; i < listLength; i++) {
-					document.getElementsByClassName("header-link")[i].style.fontSize = (16 * window.innerWidth / 1300) + "px";
-				}
-			}
-		}
-		</script>
+    	<head>
+    	<meta charset="utf-8">
+        	<title>Testing Environment</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	</head>
+	<body style="margin: 10px;">
+This is a repository I use for testing static pages.<br><br>
+
+This repository is not my website. For my website, please refer to <a href="https://github.com/jdabtieu/jdabtieu-site">https://github.com/jdabtieu/jdabtieu-site</a><br><br>
+
+I do not guarantee the accuracy of any information presented on this website or in <a href="https://github.com/jdabtieu/jdabtieu.github.io">my repository</a>.
 	</body>
 </html>
